--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-typing-effect": "^2.0.5",
+    "react-webcam": "^7.2.0",
+    "tailwindcss": "^3.4.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
